--- a/requirements.txt
+++ b/requirements.txt
@@ -1,67 +1,67 @@
-aiohttp==3.8.5
-aiosignal==1.3.1
-annotated-types==0.5.0
-anyio==3.7.1
-async-timeout==4.0.3
-attrs==23.1.0
-certifi==2023.7.22
-cffi==1.15.1
-charset-normalizer==3.2.0
-click==8.1.7
-cryptography==41.0.4
-dataclasses-json==0.6.0
-dnspython==2.4.2
-email-validator==2.0.0.post2
-exceptiongroup==1.1.3
-fastapi==0.103.1
-frozenlist==1.4.0
-greenlet==2.0.2
-h11==0.14.0
-httpcore==0.18.0
-httptools==0.6.0
-httpx==0.25.0
-idna==3.4
-itsdangerous==2.1.2
-Jinja2==3.1.2
-jsonpatch==1.33
-jsonpointer==2.4
-langchain==0.0.300
-langsmith==0.0.40
-lxml==4.9.3
-MarkupSafe==2.1.3
-marshmallow==3.20.1
-multidict==6.0.4
-mypy-extensions==1.0.0
-numexpr==2.8.6
-numpy==1.26.0
-openai==0.28.0
-orjson==3.9.7
-packaging==23.1
-pdfminer.six==20221105
-Pillow==10.0.1
-pycparser==2.21
-pydantic==2.3.0
-pydantic-extra-types==2.1.0
-pydantic-settings==2.0.3
-pydantic_core==2.6.3
-python-docx==0.8.11
-python-dotenv==1.0.0
-python-multipart==0.0.6
-PyYAML==6.0.1
-regex==2023.8.8
-requests==2.31.0
-sniffio==1.3.0
-SQLAlchemy==2.0.21
-starlette==0.27.0
-tenacity==8.2.3
-tiktoken==0.5.1
-tqdm==4.66.1
-typing-inspect==0.9.0
-typing_extensions==4.8.0
-ujson==5.8.0
-urllib3==2.0.5
-uvicorn==0.23.2
-uvloop==0.17.0
-watchfiles==0.20.0
-websockets==11.0.3
-yarl==1.9.2
+aiohttp
+aiosignal
+annotated-types
+anyio
+async-timeout
+attrs
+certifi
+cffi
+charset-normalizer
+click
+cryptography
+dataclasses-json
+dnspython
+email-validator
+exceptiongroup
+fastapi
+frozenlist
+greenlet
+h11
+httpcore
+httptools
+httpx
+idna
+itsdangerous
+Jinja2
+jsonpatch
+jsonpointer
+langchain
+langsmith
+lxml
+MarkupSafe
+marshmallow
+multidict
+mypy-extensions
+numexpr
+numpy
+openai
+orjson
+packaging
+pdfminer.six
+Pillow
+pycparser
+pydantic
+pydantic-extra-types
+pydantic-settings
+pydantic_core
+python-docx
+python-dotenv
+python-multipart
+PyYAML
+regex
+requests
+sniffio
+SQLAlchemy
+starlette
+tenacity
+tiktoken
+tqdm
+typing-inspect
+typing_extensions
+ujson
+urllib3
+uvicorn
+uvloop
+watchfiles
+websockets
+yarl
